@@ -4,6 +4,10 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* check to ensure pkgdir exists; if possible, create it, else turn off binpkg
+  features.
+
+
 pkgcore 0.6: April 24th, 2011
 
 * Due to crazy work hours and moves, this release is fairly large, and frankly
